* v1.3.xxxx
  * added listing of all modules and their actions in user-friendly format
  * added support to zip CK repositories in format suitable for BitTorrent
    (to optimize exchange of large artifacts)
  * improved functionality to update repo descriptions 
    and manage dependencies on other shared repositories
  * fixed a few tiny bugs
  * added support to create an entry from a given directory (importing directories)
  * added "input_json" function to kernel to input JSON from console ...
  * added option "@@@" to CMD to add JSON from console to input
  * exchanged "@@@" and "@@" in CMD for simplicity
  * improved 'edit' function with the possibility to edit not only 
      meta of an entry, but also descrpition (via flag --edit_desc) -
      for example, useful to edit compiler flag description via
      $ ck pull repo:ck-autotuning
      $ ck edit compiler:gcc-49x

# V1.2.0605, 2015-06-05 -- stable release
  (several extra features to improve autotuning)

  * save/load extra JSON files to/from entries
  * adding desc.json into .cm (collective meta) to describe API in flat format
  * adding dependencies to repos (automatically pull all related repos -
      useful to distribute repos with all packed artifacts to reproduce experiments from papers)
  * a few cosmetic fixes

# V1.2.0513, 2015-05-13 -- stable release 
  (no major problems found during past 2 months)

  * A few extensions and small bug fixes

# V1.1.0202, 2015-02-02 -- stable pre-release for collaborators

  * A few bug fixes

# V1.1.0201, 2015-02-01 -- stable pre-release for collaborators

  * Adding many user-friendly functions
  * Adding basic CK web browser. See demo: http://cknowledge.org/repo
  * Small bug fixes

# v1.0.1214.beta, 2014-12-14 -- stable pre-release for collaborators

# v0.1.140810, 2014-11-05 -- starting point
