@@ -14,6 +14,8 @@
       for example, useful to edit compiler flag description via
       $ ck pull repo:ck-autotuning
       $ ck edit compiler:gcc-49x
+  * adding --min flag to ''load'' function to output 
+    only desc and dict to console 
 
 # V1.2.0605, 2015-06-05 -- stable release
   (several extra features to improve autotuning)
